--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -8,7 +8,7 @@
   <title>My Cool Website</title>
 </head>
 
-<body>
+<body  class="works_on_smartphone">
   <!-- 1️⃣ HEADER -->
   <header>
     <ul>
