Remaining sections complete

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <img src="https://fakeimg.pl/250x250?text=Sample+Logo" alt="logo">
+            <img src='data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 160 40"><text x="40" y="28" font-family="\'Source Sans Pro\', Arial" font-size="26" font-weight="700" fill="white">SmileSchool</text><circle cx="18" cy="20" r="12" fill="none" stroke="white" stroke-width="3"/><path d="M10 20 Q18 28, 26 20" stroke="white" stroke-width="3" fill="none"/></svg>>
           
             <ul>
                 <li><a href="#">COURSE</a></li>
@@ -57,7 +57,7 @@
         </section>
         <section>
             <div>
-                <img src="./images/Bitmap.png" alt="image">
+                <img src="./images/Bitmap (1).png" alt="image">
             </div>
             <div>
                 <blockquote>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</blockquote>
@@ -68,7 +68,7 @@
         <section>
             <h2>Most popular tutorials</h2>
             <div>
-                <img src="./images/Bitmap (1).png" alt="">
+                <img src="./images/Bitmap.png" alt="">
                 <h3>Diagonal Smile</h3>
                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                 <div>
@@ -85,7 +85,7 @@
                 <p>8 min</p>
             </div>
             <div>
-                <img src="./images/Bitmap (4).png" alt="">
+                <img src="./images/Bitmap.png" alt="">
                 <h3>Happy Smile</h3>
                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                 <div>
@@ -102,7 +102,7 @@
                 <p>8 min</p>
             </div>
             <div>
-                <img src="./images/Bitmap (3).png" alt="">
+                <img src="./images/Bitmap.png" alt="">
                 <h3>Natural Smile</h3>
                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                 <div>
@@ -119,7 +119,7 @@
                 <p>8 min</p>
             </div>
             <div>
-                <img src="./images/Bitmap (2).png" alt="">
+                <img src="./images/Bitmap.png" alt="">
                 <h3>Sad Smile</h3>
                 <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                 <div>
