--- a/headphones/0-index.html
+++ b/headphones/0-index.html
@@ -1,45 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Headphones</title>
-    <link rel="stylesheet" href="0-styles.css">
+<meta charset="UTF-8">
+<title>Headphones</title>
+<link rel="stylesheet" href="0-styles.css">
 </head>
 <body>
 
-    <!-- HEADER -->
-    <header class="header">
-        <div class="container nav-wrapper">
-            <a href="#" class="logo">
-                <img src="images/logo_headphones.png" alt="Headphones logo">
-            </a>
+<header class="hero">
+  <nav class="nav">
+    <img src="images/logo_headphones.png" class="logo">
+    <ul class="nav-links">
+      <li><a href="#">what we do</a></li>
+      <li><a href="#">our results</a></li>
+      <li><a href="#">contact us</a></li>
+    </ul>
+  </nav>
 
-            <nav class="nav">
-                <a href="#what">what we do</a>
-                <a href="#results">our results</a>
-                <a href="#contact">contact us</a>
-            </nav>
-        </div>
-    </header>
-
-    <!-- HERO -->
-    <section class="hero">
-        <div class="overlay"></div>
-
-        <div class="hero-content">
-            <h1>Lorem ipsum dolor set amet lorem ipsum</h1>
-            <h2>Lorem ipsum dolor set amet lorem ipsum dolor set</h2>
-
-            <a href="#" class="btn">CALL TO ACTION</a>
-
-            <p class="hero-desc">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
-                nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
-        </div>
-    </section>
+  <div class="hero-content">
+    <h1>Lorem ipsum dolor set amet lorem ipsum</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+    <button>CALL TO ACTION</button>
+  </div>
+</header>
 
 </body>
 </html>
