--- a/headphones/2-index.html
+++ b/headphones/2-index.html
@@ -1,125 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Headphones</title>
-    <link rel="stylesheet" href="2-styles.css">
+<meta charset="UTF-8">
+<title>Headphones</title>
+<link rel="stylesheet" href="0-styles.css">
+<link rel="stylesheet" href="1-styles.css">
+<link rel="stylesheet" href="2-styles.css">
 </head>
 <body>
 
-    <!-- HEADER -->
-    <header class="header">
-        <div class="container nav-wrapper">
-            <a href="#" class="logo">
-                <img src="images/logo_headphones.png" alt="Headphones logo">
-            </a>
+<header class="hero">
+  <nav class="nav">
+    <img src="images/logo_headphones.png" class="logo">
+    <ul class="nav-links">
+      <li><a href="#">what we do</a></li>
+      <li><a href="#">our results</a></li>
+      <li><a href="#">contact us</a></li>
+    </ul>
+  </nav>
 
-            <nav class="nav">
-                <a href="#what">what we do</a>
-                <a href="#results">our results</a>
-                <a href="#contact">contact us</a>
-            </nav>
-        </div>
-    </header>
+  <div class="hero-content">
+    <h1>Lorem ipsum dolor set amet lorem ipsum</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+    <button>CALL TO ACTION</button>
+  </div>
+</header>
 
-    <!-- HERO -->
-    <section class="hero">
-        <div class="overlay"></div>
+<section class="services">
+<h2>What we do...</h2>
+<div class="service-grid">
+  <div class="card">🎵<h3>Lorem</h3></div>
+  <div class="card">🎧<h3>Lorem</h3></div>
+  <div class="card">🎬<h3>Lorem</h3></div>
+  <div class="card">📡<h3>Lorem</h3></div>
+</div>
+</section>
 
-        <div class="hero-content">
-            <h1>Lorem ipsum dolor set amet lorem ipsum</h1>
-            <h2>Lorem ipsum dolor set amet lorem ipsum dolor set</h2>
-
-            <a href="#" class="btn">CALL TO ACTION</a>
-
-            <p class="hero-desc">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
-                nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
-        </div>
-    </section>
-    
-    <!-- WHAT WE DO SECTION -->
-    <section id="what" class="what">
-        <div class="container">
-            <h2>What we do…</h2>
-
-            <p class="what-desc">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
-
-            <div class="items">
-                <div class="item">
-                    <span class="holberton_school-icon-ic_sound icon"></span>
-                    <h3>Lorem ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
-
-                <div class="item">
-                    <span class="holberton_school-icon-ic_video icon"></span>
-                    <h3>Lorem ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
-
-                <div class="item">
-                    <span class="holberton_school-icon-ic_music icon"></span>
-                    <h3>Lorem ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
-
-                <div class="item">
-                    <span class="holberton_school-icon-ic_hearing icon"></span>
-                    <h3>Lorem ipsum</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    
-    <!-- OUR RESULTS SECTION -->
-    <section id="results" class="results">
-        <div class="overlay"></div>
-
-        <div class="container">
-            <h2>Our results speak for themselves</h2>
-
-            <p class="results-desc">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-                exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            </p>
-
-            <div class="pentagons">
-                <div class="pentagon">
-                    <div class="shape"></div>
-                    <p>+2%</p>
-                    <span>Lorem ipsum dolor</span>
-                </div>
-
-                <div class="pentagon">
-                    <div class="shape"></div>
-                    <p>+50%</p>
-                    <span>Lorem ipsum dolor</span>
-                </div>
-
-                <div class="pentagon">
-                    <div class="shape"></div>
-                    <p>+100%</p>
-                    <span>Lorem ipsum dolor</span>
-                </div>
-
-                <div class="pentagon">
-                    <div class="shape"></div>
-                    <p>+450%</p>
-                    <span>Lorem ipsum dolor</span>
-                </div>
-            </div>
-        </div>
-    </section>
+<section class="results">
+  <h2>Our results speak for themselves</h2>
+  <div class="pentagon-grid">
+    <div class="pentagon">+2%</div>
+    <div class="pentagon">+2%</div>
+    <div class="pentagon">+2%</div>
+    <div class="pentagon">+2%</div>
+  </div>
+</section>
 
 </body>
 </html>
